updated markdown-it-eleventy-img and fixed large images on small displays

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -33,7 +33,12 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
+  font-family: "Raleway";
+}
+
+img { 
+  max-width: 100%;
+  height: auto;
 }
 
 main {
